--- a/style.css
+++ b/style.css
@@ -77,13 +77,14 @@ a {
 
 .navbar-brand-bg-shape {
     position: absolute;
+    top: -9px;
     left: 50%;
     transform: translateX(-50%);
 }
 
 .navbar .nav-item .nav-link {
     color: rgb(255, 255, 255);
-    font-size: 23px;
+    font-size: 20px;
     font-weight: 400;
     line-height: 35px;
 
@@ -277,12 +278,26 @@ a {
 
 .prime-series-box {
     width: 84%;
+
     margin: 0 auto;
+    cursor: pointer;
 }
 
 .prime-series-img {
     border-radius: 40px;
     position: relative;
+}
+
+.prime-series-box:hover .main-img {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.prime-series-box:hover .hover-img {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1);
+
 }
 
 .prime-series-img.four {
@@ -590,6 +605,9 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    transition: all .3s ease-in;
+    cursor: pointer;
+
 }
 
 .serises-box::before {
@@ -633,8 +651,43 @@ a {
     height: 270px;
 }
 
+
+
+.serises-box:hover .main-img {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.serises-box:hover .hover-img {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1);
+
+}
+
+.main-img {
+    transition: all .4s ease-in;
+
+}
+
+.hover-img {
+    transition: all .4s ease-in;
+
+}
+
 .serises-box img {
     position: relative;
+
+}
+
+.hover-img {
+    position: absolute !important;
+    opacity: 0;
+    visibility: hidden;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    transform: scale(0.6);
 }
 
 .serises-box span {
@@ -783,6 +836,8 @@ a {
 }
 
 
+
+
 @media (max-width: 768px) and (min-width: 200px) {
     .dropdown-lg {
         display: none;
@@ -792,16 +847,17 @@ a {
         width: 50%;
         display: flex;
         justify-content: center;
-        top: 0;
+        top: 20px;
     }
 
     .navbar-brand img {
-        width: 50%;
+        width: 36%;
     }
 
     .navbar-brand-bg-shape {
         top: 0;
-        width: 60%;
+
+        width: 51%;
 
     }
 
@@ -816,6 +872,7 @@ a {
 
     .hero-section {
         padding: 40px 0;
+        padding-top: 0;
     }
 
     .hero-section .row .col-md-6 {
@@ -855,8 +912,13 @@ a {
         padding: 0 0px;
         width: 50%;
         justify-content: center;
-        font-size: 20px;
+        font-size: 24px;
         height: 50px;
+        border-radius: 18px;
+    }
+
+    .hero-btns {
+        gap: 10px !important;
     }
 
     .hero-img {
@@ -996,19 +1058,22 @@ a {
         justify-content: center;
     }
 
-    .footer-logo .shape,
-    .footer-logo {
-        width: 75%;
+
+
+    .footer-logo .shape {
+        width: 78%;
     }
 
     .footer-logo {
         display: flex;
-        justify-content: center;
+
     }
 
     .footer-logo .logo-f {
-        left: 63%;
-        width: 32%;
+        left: 51%;
+        width: 28%;
+        top: 18%;
+
     }
 
     .footer-logo .shape img {
@@ -1052,6 +1117,8 @@ a {
         height: 50px;
     }
 
+
+
     #scrollToTop {
         width: 50px !important;
         height: 50px !important;
@@ -1062,6 +1129,9 @@ a {
         height: 26px;
     }
 
+    .navbar {
+        height: 115px;
+    }
 }
 
 /* popup */
