--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ a {
     line-height: 35px;
 }
 
-.hero-text-content button {
+.hero-text-content a {
     padding: 0 62px;
     color: rgb(255, 255, 255);
     font-size: 24px;
@@ -124,6 +124,8 @@ a {
     font-family: 'OperaStencil';
     border-radius: 50px;
     height: 56px;
+    display: flex;
+    align-items: center;
     text-transform: uppercase;
 
 }
